# mplan

./: .gitignore  LICENSE  README.md  pyproject.toml
.superpowers/sdd/: task-1-icloud-report.md  task-1-report.md  task-2-icloud-report.md  task-4-report.md
docs/superpowers/plans/: 2026-07-09-mplan-tui-implementation.md  2026-07-10-mplan-command-mode-implementation.md  2026-07-10-mplan-grid-edit-implementation.md  2026-07-10-mplan-icloud-calendar-implementation.md  2026-07-12-mplan-detail-interactions-implementation.md  2026-07-18-mplan-sync-spinner-implementation.md
docs/superpowers/specs/: 2026-07-09-mplan-tui-design.md  2026-07-10-mplan-command-mode-design.md  2026-07-10-mplan-grid-edit-design.md  2026-07-10-mplan-icloud-calendar-design.md  2026-07-12-mplan-detail-interactions-design.md  2026-07-18-mplan-sync-spinner-design.md
src/mplan/: __init__.py  __main__.py  app.py  calendar_bridge.py  cli.py  config.py  day_editor.py  detail_view.py  doctor.py  grid_edit.py  models.py  month_grid.py  storage.py  sync.py  tui.py  tui_render.py  tui_state.py  tui_store.py
tests/: test_app.py  test_calendar_bridge.py  test_cli.py  test_detail_view.py  test_grid_edit.py  test_month_grid.py  test_storage.py  test_sync.py  test_tui.py  test_tui_render.py  test_tui_state.py  test_tui_store.py
