[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mplan"
version = "0.1.0"
description = "Month-grid terminal planner with Apple Calendar sync"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mplan = "mplan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
